--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -79,7 +79,10 @@ body{
     text-align: left;
     background-color: #fff;
   }
-
+  #icon_university{
+    margin-top:30px;
+    height:80px;
+  }
   [tabindex="-1"]:focus {
     outline: 0 !important;
   }
