--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -23,8 +23,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <form name="sentMessage" id="contactForm" novalidate="novalidate">
-                        <div class="control-group">
+                       {# <div class="control-group">
                             <div class="form-group floating-label-form-group controls mb-0 pb-2">
                                 <label>Name</label>
                                 <input class="form-control" id="name" type="text" placeholder="Nom" required="required" data-validation-required-message="Please enter your name.">
@@ -56,8 +55,13 @@
                         <div id="success"></div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Envoyer</button>
+                        </div>#}
+                    {% for message in app.flashes('success') %}
+                        <div class="alert alert-success">
+                            {{ message }}
                         </div>
-                    </form>
+                    {% endfor %}
+                        {{ form(contactForm) }}
                 </div>
             </div>
         </div>
