--- a/templates/home/footer.html.twig
+++ b/templates/home/footer.html.twig
@@ -6,7 +6,7 @@
             <!-- Footer Location -->
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4">Localisation</h4>
-                <p class="lead mb-0">adresse</p>
+                <p class="lead mb-0">23 allée des champs fleuris, 45650 Saint-Jean-le-blanc</p>
             </div>
 
             <!-- Footer Social Icons -->
@@ -38,3 +38,10 @@
     </div>
 
 </footer>
+
+
+<section class="copyright py-4 text-center text-white">
+    <div class="container">
+        <small>Copyright &copy; Your Website 2020</small>
+    </div>
+</section>
